a1/brendan_gordon/TEST_PROGRAMS/invalidtype/evan_vassallo/prog1.min
var s : string;

read x;

s = 1;
t = 5;

